# Emily

./: .gitignore  Cargo.toml  NEXT_STEPS.md  PHASE2_COMPLETE.md  PROJECT_STATUS.md  README.md
src/: lib.rs  main.rs
src/bot/: mod.rs
src/gateways/: mod.rs  traits.rs
src/models/: card.rs  mod.rs  response.rs
src/services/: field_scraper.rs  mod.rs  response_parser.rs  token_manager.rs
src/utils/: generators.rs  http_client.rs  mod.rs  validators.rs
