[package]
name = "payment-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Telegram bot
teloxide = { version = "0.12", features = ["macros"] }

# HTML parsing
scraper = "0.18"
select = "0.6"

# Regex
regex = "1.10"

# Encoding
base64 = "0.21"
urlencoding = "2.1"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Random generation
rand = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2.5"

# Colored output
colored = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
